--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "start:dev": "nest start --watch",
+        "start:dev": "nest build --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,6 +24,8 @@
         "@liaoliaots/nestjs-redis": "^9.0.2",
         "@nestjs/common": "^9.0.0",
         "@nestjs/core": "^9.0.0",
+        "@nestjs/jwt": "^9.0.0",
+        "@nestjs/passport": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/swagger": "^6.1.2",
         "@nestjs/typeorm": "^9.0.1",
@@ -31,6 +33,8 @@
         "class-validator": "^0.13.2",
         "ioredis": "^5.2.3",
         "mysql2": "^2.3.3",
+        "passport": "^0.6.0",
+        "passport-jwt": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
@@ -44,6 +48,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "28.1.8",
         "@types/node": "^16.0.0",
+        "@types/passport-jwt": "^3.0.6",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
